--- a/src/style.css
+++ b/src/style.css
@@ -55,3 +55,18 @@ body {
 .track-info > div {
 	text-align: right;
 }
+.easy-button-button .gpt-sphere {
+    padding-left: 0px;
+    margin-left: 0em;
+    font-size: 20px;
+    left: -11px;
+    top: -11px;
+}
+button.easy-button-button {
+    border: none;
+}
+
+.easy-button-container {
+    width: 30px;
+    height: 30px;
+}
